--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -746,6 +746,18 @@
   note = {[[pdf]]/papers/Schrobsdorff2012inhibition.pdf[[/pdf]]}
 }
 
+@article{sedlinska_transcranial_2023,
+  title = {Transcranial Direct-Current Stimulation Enhances {{Pavlovian}} Tendencies during Intermittent Loss of Control},
+  author = {Sedlinska, Terezie and Bolte, Lara and Melsæter, Eirik and Mittner, Matthias and Csifcsák, Gabor},
+  date = {2023-04-14},
+  journaltitle = {Frontiers in Psychiatry},
+  volume = {14},
+  doi = {10.3389/fpsyt.2023.1164208},
+  url = {https://www.frontiersin.org/articles/10.3389/fpsyt.2023.1164208},
+  abstract = {Pavlovian bias is an innate motivational tendency to approach rewards and remain passive in the face of punishment. The relative reliance on Pavlovian valuation has been found to increase when the perceived control over environmental reinforcers is compromised, leading to behavior resembling learned helplessness (LH). In our study, we used a version of an orthogonalized Go-NoGo reinforcement learning task to examine the relative reliance on Pavlovian and instrumental valuation during and after an intermittent loss of control over rewards and losses. Sixty healthy young adults underwent the task and received anodal high-definition transcranial direct current stimulation (HD-tDCS) over the medial prefrontal/ dorsal anterior cingulate cortex in a randomized, double-blind, sham-controlled study. Furthermore, we evaluated changes in cue-locked mid-frontal theta power derived from electroencephalography. We hypothesized that active stimulation would reduce Pavlovian bias during manipulation of outcome controllability, and the effect would be accompanied by stronger mid-frontal theta activity, representing arbitration between choice strategies in favor of instrumental relative to Pavlovian valuation. We found a progressive decrease in Pavlovian bias during and after the loss of control over feedback. Active HD-tDCS counteracted this effect while not affecting the mid-frontal theta signal. The results were at odds with our hypotheses but also with previous findings reporting LH-like patterns during and after the loss of control without brain stimulation. The discrepancy may be related to different protocols for the controllability manipulation. We argue that the subjective evaluation of task controllability is crucial in mediating the balance between Pavlovian and instrumental valuation during reinforcement learning and that the medial prefrontal/dorsal anterior cingulate cortex is a key region in this respect. These findings have implications for understanding the behavioral and neural underpinnings of LH in humans.},
+  note = {[[pdf]]/papers/Sedlinska2023Frontiers.pdf[[/pdf]][[preprint]]https://psyarxiv.com/9v5sy/[[/preprint]][[supplement]]https://osf.io/73huk/[[/supplement]]}
+}
+
 @article{turi_blinding_2019-1,
   title = {Blinding Is Compromised for Transcranial Direct Current Stimulation at 1 {{mA}} for 20 Min in Young Healthy Adults},
   author = {Turi, Zsolt and Csifcsák, Gábor and Boayue, Nya Mehnwolo and Aslaksen, Per and Antal, Andrea and Paulus, Walter and Groot, Josephine and Hawkins, Guy E. and Forstmann, Birte and Opitz, Alexander and Thielscher, Axel and Mittner, Matthias},
