Rasmussen2023NIReports added

--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -630,6 +630,26 @@
   note = {[[pdf]]/papers/Rasmussen2021HDTDCS.pdf[[/pdf]]}
 }
 
+@article{rasmussen_tracking_2023,
+  title = {Tracking the Current in the {{Alzheimer}}'s Brain - {{Systematic}} Differences between Patients and Healthy Controls in the Electric Field Induced by {{tDCS}}},
+  author = {Rasmussen, Ingrid Daae and Mittner, Matthias and Boayue, Nya Mehnwolo and Csifcsák, Gábor and Aslaksen, Per M.},
+  date = {2023-06-01},
+  journaltitle = {Neuroimage: Reports},
+  shortjournal = {Neuroimage: Reports},
+  volume = {3},
+  number = {2},
+  pages = {100172},
+  issn = {2666-9560},
+  doi = {10.1016/j.ynirp.2023.100172},
+  url = {https://www.sciencedirect.com/science/article/pii/S266695602300017X},
+  urldate = {2023-04-26},
+  abstract = {Background Several studies on patients with Alzheimer's disease (AD) have used transcranial direct current stimulation (tDCS) to enhance neural excitability in the left dorsolateral prefrontal cortex (lDLPFC). Interindividual differences in brain anatomy in AD patients pose a challenge to efficiently target the lDLPFC using scalp-based coordinates, calling for new and more precise tDCS protocols. Objective The purpose of this study was to explore how AD-related neuropathology affects the tDCS-induced electric field (EF) across different DLPFC montages using computational modeling. Method Forty-eight realistic head models were created from structural magnetic resonance scans of AD patients and healthy controls collected from a publicly available database. We compared the tDCS-induced EF in different montages applied in the literature, in addition to a high definition (HD)-tDCS montage centered at electrode F3. Results There was an overall global reduction in EF strength in the patient group, probably due to structural alterations that were also identified in the patient group. A widespread distribution of the EF was found across the frontal lobe for bipolar montages, while HD-tDCS yielded more focal stimulation, mainly restricted to the lDLPFC. Minor differences in the EF distribution were found when comparing the HD-tDCS montages. Conclusion Neurodegenerative alterations present in patients with AD affect the magnitude, distribution and variability of the EF. HD-tDCS montages provide more focal stimulation of the target area, compared to bipolar montages with to pronounced group differences between AD patients and healthy matched controls. This finding poses substantial limitations to the comparison of cognitive effects of tDCS both between patients and controls and within patients at different stages of disease progression.},
+  langid = {english},
+  keywords = {Alzheimer's disease,Computational modeling,Noninvasive brain stimulation,tDCS,tDCS-induced electric field,Transcranial direct current stimulation},
+  note = {[[pdf]]/papers/Rasmussen2023NIReports.pdf[[/pdf]][[supplement]]https://osf.io/9wgrq[[/supplement]]},
+  file = {/Users/mmi041/Zotero/storage/P3A5MS4Z/Rasmussen et al. - 2023 - Tracking the current in the Alzheimer's brain - Sy.pdf;/Users/mmi041/Zotero/storage/XMHZ6UCB/S266695602300017X.html}
+}
+
 @article{ritschel_3d_2008-2,
   title = {{{3D Unsharp Masking}} for {{Scene Coherent Enhancement}}},
   author = {Ritschel, Tobias and Smith, Kaleigh and Ihrke, Matthias and Grosch, Thorsten and Myszkowski, Karol and Seidel, Hans-Peter},
