--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -34,7 +34,7 @@
   doi = {10.1111/j.1469-8986.2010.00989.x},
   abstract = {Event-related potentials (ERPs) were obtained from an identity priming task, where a green target had to be selected against a superimposed red distractor. Several priming conditions were realized in a mix of control (CO), negative priming (NP), and positive priming (PP) trials. PP and NP effects in reaction times (RTs) were significant. ERP results conceptually replicate earlier findings of left-posterior P300 reduction in PP and NP trials compared to CO. This ERP effect may reflect the detection of prime-probe similarity corresponding to the concept of a retrieval cue. A novel finding concerned amplitude increase of the frontal late positive complex (LPC) in the order NP, CO, and PP. NP therefore seemed to induce brain activity related to cognitive control and/or memory processes, with reduced LPC amplitude indicating effortful processing. Overall, retrieval-based explanations of identity NP are supported.},
   langid = {english},
-  keywords = {Adult,Cues,Electroencephalography,Event-Related Potentials; P300,Evoked Potentials,Female,Humans,Male,Photic Stimulation,Reaction Time,Visual Perception,Young Adult},
+  keywords = {Adult,Cues,Electroencephalography,{Event-Related Potentials, P300},Evoked Potentials,Female,Humans,Male,Photic Stimulation,Reaction Time,Visual Perception,Young Adult},
   note = {[[pdf]]/papers/Behrendt2010.pdf[[/pdf]]}
 }
 
@@ -126,7 +126,7 @@
   doi = {10.1016/j.jad.2018.02.077},
   abstract = {BACKGROUND: Transcranial direct current stimulation (tDCS) above the left dorsolateral prefrontal cortex (lDLPFC) has been widely used to improve symptoms of major depressive disorder (MDD). However, the effects of different stimulation protocols in the entire frontal lobe have not been investigated in a large sample including patient data. METHODS: We used 38 head models created from structural magnetic resonance imaging data of 19 healthy adults and 19 MDD patients and applied computational modeling to simulate the spatial distribution of tDCS-induced electric fields (EFs) in 20 frontal regions. We evaluated effects of seven bipolar and two multi-electrode 4\,×\,1 tDCS protocols. RESULTS: For bipolar montages, EFs were of comparable strength in the lDLPFC and in the medial prefrontal cortex (MPFC). Depending on stimulation parameters, EF cortical maps varied to a considerable degree, but were found to be similar in controls and patients. 4\,×\,1 montages produced more localized, albeit weaker effects. LIMITATIONS: White matter anisotropy was not modeled. The relationship between EF strength and clinical response to tDCS could not be evaluated. CONCLUSIONS: In addition to lDLPFC stimulation, excitability changes in the MPFC should also be considered as a potential mechanism underlying clinical efficacy of bipolar montages. MDD-associated anatomical variations are not likely to substantially influence current flow. Individual modeling of tDCS protocols can substantially improve cortical targeting. We make recommendations for future research to explicitly test the contribution of lDLPFC vs. MPFC stimulation to therapeutic outcomes of tDCS in this disorder.},
   langid = {english},
-  keywords = {Adult,Computational modeling,Computer Simulation,Depression,Depressive Disorder; Major,Dorsolateral prefrontal cortex,Female,Frontal Lobe,Humans,Male,Medial prefrontal cortex,Models; Theoretical,Prefrontal Cortex,tDCS,Transcranial direct current stimulation,Transcranial Direct Current Stimulation},
+  keywords = {Adult,Computational modeling,Computer Simulation,Depression,{Depressive Disorder, Major},Dorsolateral prefrontal cortex,Female,Frontal Lobe,Humans,Male,Medial prefrontal cortex,{Models, Theoretical},Prefrontal Cortex,tDCS,Transcranial direct current stimulation,Transcranial Direct Current Stimulation},
   note = {[[preprint]]https://psyarxiv.com/erwvu/[[/preprint]][[pdf]]/papers/Csifcsak2018jad.pdf[[/pdf]][[supplement]]https://osf.io/u5brq/[[/supplement]]}
 }
 
@@ -201,6 +201,24 @@
   abstract = {When the human mind wanders, it engages in episodes during which attention is focused on self-generated thoughts rather than on external task demands. Although the sustained attention to response task is commonly used to examine relationships between mind wandering and executive functions, limited executive resources are required for optimal task performance. In the current study, we aimed to investigate the relationship between mind wandering and executive functions more closely by employing a recently developed finger-tapping task to monitor fluctuations in attention and executive control through task performance and periodical experience sampling during concurrent functional magnetic resonance imaging (fMRI) and pupillometry. Our results show that mind wandering was preceded by increases in finger-tapping variability, which was correlated with activity in dorsal and ventral attention networks. The entropy of random finger-tapping sequences was related to activity in frontoparietal regions associated with executive control, demonstrating the suitability of this paradigm for studying executive functioning. The neural correlates of behavioral performance, pupillary dynamics, and self-reported attentional state diverged, thus indicating a dissociation between direct and indirect markers of mind wandering. Together, the investigation of these relationships at both the behavioral and neural level provided novel insights into the identification of underlying mechanisms of mind wandering.},
   note = {[[pdf]]/papers/Groot2022CerebCortex.pdf[[/pdf]][[preprint]]https://psyarxiv.com/m9fq4/[[/preprint]][[supplement]]https://osf.io/56fcx/[[/supplement]]},
   file = {/Users/mmi041/Zotero/storage/DI73XHHS/Groot et al. - 2022 - Catching Wandering Minds with Tapping Fingers Neu.pdf;/Users/mmi041/Zotero/storage/EZYM857P/6509013.html}
+}
+
+@article{groot_echoes_2023,
+  title = {Echoes from Intrinsic Connectivity Networks in the Subcortex},
+  author = {Groot, Josephine M. and Miletic, Steven and Isherwood, Scott JS and Tse, Desmond HY and Habli, Sarah and Håberg, Asta K. and Forstmann, Birte U. and Bazin, Pierre-Louis and Mittner, Matthias},
+  date = {2023-08-10},
+  journaltitle = {Journal of Neuroscience},
+  shortjournal = {J. Neurosci.},
+  eprint = {37562962},
+  eprinttype = {pmid},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.1020-23.2023},
+  url = {https://www.jneurosci.org/content/early/2023/08/09/JNEUROSCI.1020-23.2023},
+  urldate = {2023-08-23},
+  abstract = {Decades of research have greatly improved our understanding of intrinsic human brain organization in terms of functional networks and the transmodal hubs within the cortex at which they converge. However, substrates of multi-network integration in the human subcortex are relatively uncharted. Here, we leveraged recent advances in subcortical atlasing and ultra-high field (7T) imaging optimized for the subcortex to investigate the functional architecture of fourteen individual structures in healthy adult males and females with a fully data-driven approach. We revealed that spontaneous neural activity in subcortical regions can be decomposed into multiple independent subsignals that correlate with, or ‘echo’, the activity in functional networks across the cortex. Distinct subregions of the thalamus, striatum, claustrum, and hippocampus showed a varied pattern of echoes from attention, control, visual, somatomotor, and default mode networks, demonstrating evidence for a heterogeneous organization supportive of functional integration. Multiple network activity furthermore converged within the globus pallidus externa, substantia nigra, and ventral tegmental area but was specific to one subregion, while the amygdala and pedunculopontine nucleus preferentially affiliated with a single network, showing a more homogeneous topography. Subregional connectivity of the globus pallidus interna, subthalamic nucleus, red nucleus, periaqueductal grey, and locus coeruleus did not resemble patterns of cortical network activity. Together, these finding describe potential mechanisms through which the subcortex participates in integrated and segregated information processing and shapes the spontaneous cognitive dynamics during rest. Significance statement Despite the impact of subcortical dysfunction on brain health and cognition, large-scale functional mapping of subcortical structures severely lags behind that of the cortex. Recent developments in subcortical atlasing and imaging at ultra-high field provide new avenues for studying the intricate functional architecture of the human subcortex. With a fully data-driven analysis, we reveal subregional connectivity profiles of a large set of non-cortical structures, including those rarely studied in fMRI research. The results have implications for understanding how the functional organization of the subcortex facilitates integrative processing through cross-network information convergence, paving the way for future work aimed at improving our knowledge of subcortical contributions to intrinsic brain dynamics and spontaneous cognition.},
+  langid = {english},
+  note = {[[pdf]]/papers/Groot2023JoN.pdf[[/pdf]][[preprint]]https://psyarxiv.com/xr25q/[[/preprint]][[supplement]]https://osf.io/wt3uc/[[/supplement]]}
 }
 
 @article{groot_probing_2021,
@@ -290,7 +308,7 @@
   doi = {10.1016/j.neuroscience.2015.09.053},
   abstract = {People often "mind wander" during everyday tasks, temporarily losing track of time, place, or current task goals. In laboratory-based tasks, mind wandering is often associated with performance decrements in behavioral variables and changes in neural recordings. Such empirical associations provide descriptive accounts of mind wandering - how it affects ongoing task performance - but fail to provide true explanatory accounts - why it affects task performance. In this perspectives paper, we consider mind wandering as a neural state or process that affects the parameters of quantitative cognitive process models, which in turn affect observed behavioral performance. Our approach thus uses cognitive process models to bridge the explanatory divide between neural and behavioral data. We provide an overview of two general frameworks for developing a model-based cognitive neuroscience of mind wandering. The first approach uses neural data to segment observed performance into a discrete mixture of latent task-related and task-unrelated states, and the second regresses single-trial measures of neural activity onto structured trial-by-trial variation in the parameters of cognitive process models. We discuss the relative merits of the two approaches, and the research questions they can answer, and highlight that both approaches allow neural data to provide additional constraint on the parameters of cognitive models, which will lead to a more precise account of the effect of mind wandering on brain and behavior. We conclude by summarizing prospects for mind wandering as conceived within a model-based cognitive neuroscience framework, highlighting the opportunities for its continued study and the benefits that arise from using well-developed quantitative techniques to study abstract theoretical constructs.},
   langid = {english},
-  keywords = {Attention,Brain,Cognition,Decision Making,Humans,Imagination,Markov Chains,mind wandering,mixture model,model-based cognitive neuroscience,Models; Neurological,sequential sampling model,single-trial regression,task-unrelated thoughts,Thinking},
+  keywords = {Attention,Brain,Cognition,Decision Making,Humans,Imagination,Markov Chains,mind wandering,mixture model,model-based cognitive neuroscience,{Models, Neurological},sequential sampling model,single-trial regression,task-unrelated thoughts,Thinking},
   note = {[[pdf]]/papers/Hawkins2015towards.pdf[[/pdf]][[website]]/post/2015/09/21/newreviewpaper/[[/website]]}
 }
 
@@ -386,7 +404,7 @@
   doi = {10.1027/1618-3169/a000169},
   abstract = {The hypothesis that retrieval of the prime response is responsible for the negative priming (NP) effect has gained popularity in recent studies of visual identity NP. In the current study we report an experiment in which we aimed to remove the response from the prime memory trace by means of spatio-temporal separation. Compared to an identical experiment without this separation (Ihrke et al., 2011), we find that the response-retrieval-specific interaction is absent indicating that the separation was successful in preventing response-retrieval. Still, both negative and positive priming are present as main effects which show that processes other than response-retrieval can produce NP. In addition, based on recordings of the eye-movements during task processing, we localize the NP effect in a target-selection process while positive priming manifests in facilitated response-selection. Our results are in line with a multiple-route view of NP.},
   langid = {english},
-  keywords = {Adult,Eye Movements,Female,Humans,Male,Memory,Pattern Recognition; Visual,Reaction Time,Young Adult},
+  keywords = {Adult,Eye Movements,Female,Humans,Male,Memory,{Pattern Recognition, Visual},Reaction Time,Young Adult},
   note = {[[pdf]]/papers/Ihrke2012NPPersists.pdf[[/pdf]]}
 }
 
@@ -405,7 +423,7 @@
   doi = {10.1142/S0129065711002651},
   abstract = {We introduce an approach to compensate for temporal distortions of repeated measurements in event-related potential research. The algorithm uses a combination of methods from nonlinear time-series analysis and is based on the construction of pairwise registration functions from cross-recurrence plots of the phase-space representations of ERP signals. The globally optimal multiple-alignment path is approximated by hierarchical cluster analysis, i.e. by iteratively combining pairs of trials according to similarity. By the inclusion of context information in form of externally acquired time markers (e.g. reaction time) into a regularization scheme, the extracted warping functions can be guided near paths that are implied by the experimental procedure. All parameters occurring in the algorithm can be optimized based on the properties of the data and there is a broad regime of parameter configurations where the algorithm produces good results. Simulations on artificial data and the analysis of ERPs from a psychophysical study demonstrate the robustness and applicability of the algorithm.},
   langid = {english},
-  keywords = {Algorithms,Cluster Analysis,Electroencephalography,Evoked Potentials,Humans,Image Processing; Computer-Assisted},
+  keywords = {Algorithms,Cluster Analysis,Electroencephalography,Evoked Potentials,Humans,{Image Processing, Computer-Assisted}},
   note = {[[pdf]]/papers/Ihrke2011lospaper.pdf[[/pdf]]}
 }
 
@@ -594,7 +612,7 @@
   abstract = {Mind wandering is an ubiquitous phenomenon in everyday life. In the cognitive neurosciences, mind wandering has been associated with several distinct neural processes, most notably increased activity in the default mode network (DMN), suppressed activity within the anti-correlated (task-positive) network (ACN), and changes in neuromodulation. By using an integrative multimodal approach combining machine-learning techniques with modeling of latent cognitive processes, we show that mind wandering in humans is characterized by inefficiencies in executive control (task-monitoring) processes. This failure is predicted by a single-trial signature of (co)activations in the DMN, ACN, and neuromodulation, and accompanied by a decreased rate of evidence accumulation and response thresholds in the cognitive model.},
   langid = {english},
   pmcid = {PMC4252543},
-  keywords = {Adult,Attention,Brain,Brain Mapping,Cognition,cognitive modeling,Executive Function,Female,fMRI,Humans,Magnetic Resonance Imaging,Male,mind wandering,model-based neuroscience,Models; Neurological,MVPA,Neural Pathways,Pupil,resting state,Young Adult},
+  keywords = {Adult,Attention,Brain,Brain Mapping,Cognition,cognitive modeling,Executive Function,Female,fMRI,Humans,Magnetic Resonance Imaging,Male,mind wandering,model-based neuroscience,{Models, Neurological},MVPA,Neural Pathways,Pupil,resting state,Young Adult},
   note = {[[pdf]]/papers/Mittner2014.pdf[[/pdf]][[correction]]http://www.jneurosci.org/content/37/22/5587[[/correction]]}
 }
 
@@ -682,7 +700,7 @@
   url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1467-8659.2009.01357.x},
   urldate = {2018-12-18},
   abstract = {Abstract Glare is a consequence of light scattered within the human eye when looking at bright light sources. This effect can be exploited for tone mapping since adding glare to the depiction of high-dynamic range (HDR) imagery on a low-dynamic range (LDR) medium can dramatically increase perceived contrast. Even though most, if not all, subjects report perceiving glare as a bright pattern that fluctuates in time, up to now it has only been modeled as a static phenomenon. We argue that the temporal properties of glare are a strong means to increase perceived brightness and to produce realistic and attractive renderings of bright light sources. Based on the anatomy of the human eye, we propose a model that enables real-time simulation of dynamic glare on a GPU. This allows an improved depiction of HDR images on LDR media for interactive applications like games, feature films, or even by adding movement to initially static HDR images. By conducting psychophysical studies, we validate that our method improves perceived brightness and that dynamic glare-renderings are often perceived as more attractive depending on the chosen scene.},
-  keywords = {COMPUTER GRAPHICS [I.3.3]: Color; Shading; Shadowing and Texture,COMPUTER GRAPHICS [I.3.7]: Three-Dimensional Graphics and Realism},
+  keywords = {{COMPUTER GRAPHICS [I.3.3]: Color, Shading, Shadowing and Texture},COMPUTER GRAPHICS [I.3.7]: Three-Dimensional Graphics and Realism},
   note = {[[pdf]]/papers/Ritschel2009glare.pdf[[/pdf]][[website]]http://resources.mpi-inf.mpg.de/hdr/TemporalGlare/index.html[[/website]][[correction]]https://onlinelibrary.wiley.com/doi/10.1111/j.1467-8659.2009.01549.x[[/correction]]},
   file = {/Users/mmi041/Zotero/storage/27B5L8YJ/j.1467-8659.2009.01357.html}
 }
@@ -703,7 +721,7 @@
   doi = {10.1177/0031512516628370},
   abstract = {Aging is accompanied by declines in cognitive and sensorimotor functions. However, at present, the interrelation between attentional processes and dexterity in aging has not been thoroughly addressed. This study explored the relationship between executive function, working memory, and dexterity performance in 15 young and 15 healthy elderly, right-handed participants. A modified version of the Purdue Pegboard Test was used for dexterity assessment. Two subtasks were selected to calculate temporal and kinematic parameters of reaching, grasping, transport, and insertion of pegs. Evaluation of executive function and working memory was performed using neuropsychological tests. The relationship between dexterity and cognitive outcomes were also examined. Results showed that the prehensile movements involved in grasping and their speed significantly differed between groups and correlated with executive function in the young group. For elderly adults, variability of hand movements turned out to be associated with executive abilities.},
   langid = {english},
-  keywords = {Adult,Age Factors,Aged,Aged; 80 and over,Aging,Attention,Biomechanical Phenomena,dexterity,Executive Function,executive functions,Female,Hand,Humans,kinematics,Male,Memory; Short-Term,Neuropsychological Tests,normal aging,Psychomotor Performance,working memory,Young Adult},
+  keywords = {Adult,Age Factors,Aged,{Aged, 80 and over},Aging,Attention,Biomechanical Phenomena,dexterity,Executive Function,executive functions,Female,Hand,Humans,kinematics,Male,{Memory, Short-Term},Neuropsychological Tests,normal aging,Psychomotor Performance,working memory,Young Adult},
   note = {[[pdf]]/papers/Rodriguez2016.pdf[[/pdf]][[website]]/post/2016/02/29/association-between-executive-functions-working-memory-and-manual-dexterity/[[/website]]}
 }
 
@@ -906,7 +924,7 @@
   doi = {10.1016/j.cortex.2014.08.026},
   abstract = {INTRODUCTION: There is growing evidence from neuro-computational studies that instrumental learning involves the dynamic interaction of a computationally rigid, low-level striatal and a more flexible, high-level prefrontal component. METHODS: To evaluate the role of the prefrontal cortex in instrumental learning, we applied anodal transcranial direct current stimulation (tDCS) optimized for the left dorsolateral prefrontal cortex, by using realistic MR-derived finite element model-based electric field simulations. In a study with a double-blind, sham-controlled, repeated-measures design, sixteen male participants performed a probabilistic learning task while receiving anodal and sham tDCS in a counterbalanced order. RESULTS: Compared to sham tDCS, anodal tDCS significantly increased the amount of maladaptive shifting behavior after optimal outcomes during learning when reward probabilities were highly dissociable. Derived parameters of the Q-learning computational model further revealed a significantly increased model parameter that was sensitive to random action selection in the anodal compared to the sham tDCS session, whereas the learning rate parameter was not influenced significantly by tDCS. CONCLUSION: These results congruently indicate that prefrontal tDCS during instrumental learning increased randomness of choice, possibly reflecting the influence of the cognitive prefrontal component.},
   langid = {english},
-  keywords = {Adult,Choice Behavior,Conditioning; Operant,Dorsolateral prefrontal cortex,Double-Blind Method,Exploitation,Exploration,Humans,Male,Neuropsychological Tests,Prefrontal Cortex,Probabilistic learning task,Transcranial direct current stimulation,Transcranial Direct Current Stimulation,Working memory,Young Adult},
+  keywords = {Adult,Choice Behavior,{Conditioning, Operant},Dorsolateral prefrontal cortex,Double-Blind Method,Exploitation,Exploration,Humans,Male,Neuropsychological Tests,Prefrontal Cortex,Probabilistic learning task,Transcranial direct current stimulation,Transcranial Direct Current Stimulation,Working memory,Young Adult},
   note = {[[pdf]]/papers/Turi2015cortex.pdf[[/pdf]]}
 }
 
