added Trial paper

--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -635,6 +635,26 @@
   file = {/Users/mmi041/Zotero/storage/PGYJ7ISZ/Nawani et al. - 2023 - Modulation of mind wandering using transcranial di.pdf;/Users/mmi041/Zotero/storage/M6VN6UYM/S1053811923001970.html}
 }
 
+@article{orbo_antidepressant_2023,
+  title = {The Antidepressant Effect of Intermittent Theta Burst Stimulation ({{iTBS}}): Study Protocol for a Randomized Double-Blind Sham-Controlled Trial},
+  shorttitle = {The Antidepressant Effect of Intermittent Theta Burst Stimulation ({{iTBS}})},
+  author = {Ørbo, Marte Christine and Grønli, Ole K. and Larsen, Camilla and Vangberg, Torgil R. and Friborg, Oddgeir and Turi, Zsolt and Mittner, Matthias and Csifcsak, Gabor and Aslaksen, Per M.},
+  date = {2023-10-02},
+  journaltitle = {Trials},
+  shortjournal = {Trials},
+  volume = {24},
+  number = {1},
+  pages = {627},
+  issn = {1745-6215},
+  doi = {10.1186/s13063-023-07674-6},
+  url = {https://doi.org/10.1186/s13063-023-07674-6},
+  urldate = {2023-10-02},
+  abstract = {Intermittent theta burst stimulation (iTBS) when applied over the left dorsolateral prefrontal cortex (DLPFC) has been shown to be equally effective and safe to treat depression compared to traditional repetitive transcranial magnetic stimulation (rTMS) paradigms. This protocol describes a funded single-centre, double-blind, randomized placebo-controlled, clinical trial to investigate the antidepressive effects of iTBS and factors associated with an antidepressive response.},
+  langid = {english},
+  keywords = {Cognition,Depression,Genetic factors,Intermittent theta burst stimulation,Magnetic resonance imaging,Randomized controlled trial},
+  file = {/Users/mmi041/Zotero/storage/WH4Q2SN6/Ørbo et al. - 2023 - The antidepressant effect of intermittent theta bu.pdf}
+}
+
 @article{rasmussen_high-definition_2021-1,
   title = {High-{{Definition Transcranial Direct Current Stimulation Improves Delayed Memory}} in {{Alzheimer}}’s {{Disease Patients}}: {{A Pilot Study Using Computational Modeling}} to {{Optimize Electrode Position}}},
   author = {Rasmussen, Ingrid Daae and Boayue, Nya Mehnwolo and Mittner, Matthias and Bystad, Martin and Grønli, Ole K. and Vangberg, Torgil Riise and Csifcsák, Gábor and Aslaksen, Per M.},
